2012-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/gnuplot.el: elisp is now getting serious about a syntax change
	announced 10+ years ago.   s/(` (/`(/
	While here, clean out some old cruft from the directory.

2012-08-07  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Revised test for transparency support to match
	the implementation in AquaTerm version 1.1.1

2012-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c src/tabulate.c:
	Blank lines separating datasets in an input file were stored as an
	UNDEFINED point but not otherwise marked. This patch introduces a
	recognizable (struct coordinate)blank_data_line that is stored when
	a blank line is encounted. This means that when writing the data back
	out via "set table" the separation between data sets can be maintained.
	Bug #3553151

2012-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/command.c src/command.h src/eval.c
	src/eval.h src/graphics.c src/mouse.c src/parse.c src/parse.h
	src/plot2d.c src/save.c src/set.c src/show.c src/tables.c src/tables.h
	src/unset.c term/canvas.trm:

	New command and functionality
	   set link [x2|y2] {via <expression1> inverse <expression2>}
	   unset link [x2|y2]
	This ties the range on the secondary axis to that of the primary axis.
	<expression1> maps the primary axis coordinates onto the secondary axis.
	<expression2> maps the secondary axis coordinates onto the primary axis.
	The optional mapping can be nonlinear. If x2/y2 tics are auto-generated,
	they will be labeled in the transformed coordinate system.
	Mouse tracking readout will also report the transformed coordinates.

	Note: Making the "linked_to_primary" option generic introduces compiler
	warnings from the code handling the colorbar axis, which in reality can
	never be linked.  These will be removed in a subsequent patchset.

 	* demo/TaBr.dem docs/gnuplot.doc: